# meeting-debrief

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_report.md
meeting_debrief/: __init__.py  analyze.py  cli.py  diarize.py  merge.py  report.py  transcribe.py
